--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^7",
     "socket.io-client": "^4.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
